# BioCircuitAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: registry.csv
data/control/: closed_loop_controls.csv  closed_loop_trajectory.csv  summary.json
data/dbtl/ebcc75fb/: bo_best.json  surrogate.pt  validate_result.json
data/multitarget/: summary.csv
data/multitarget/A10_B8/: result.json
data/multitarget/A1_B8/: result.json
data/multitarget/A5_B5/: result.json
data/multitarget/A60_B20/: result.json
data/opt/: best_result.json
scripts/: optimize_circuit.py  run_control.py  run_dbtl.py  run_multitarget.py  run_simulation.py  train_surrogate.py
src/biocircuitai/: __init__.py  config.py
src/biocircuitai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/biocircuitai/app/: __init__.py  dashboard.py
src/biocircuitai/control/: __init__.py  controllers.py  multitarget.py  optimizer.py  scheduler.py
src/biocircuitai/io/: logging.py  storage.py
src/biocircuitai/simulate/: __init__.py  experiments.py  models.py  ode_solver.py
src/biocircuitai/surrogate/: __init__.py  dataset.py  evaluate.py  model.py  preprocess.py  train.py
tests/: test_control.py  test_ode.py  test_surrogate.py
